localstack/k8s/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-localstack-deployment
  namespace: bao-${DEPLOY_ENV}-env
  labels:
    app: bao-platform
    env: ${DEPLOY_ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-localstack-service
  template:
    metadata:
      labels:
        app: gau-localstack-service
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: edge
              containerPort: 4566
              protocol: TCP
            - name: ext-services
              containerPort: 4571
              protocol: TCP
          volumeMounts:
            - name: localstack-data
              mountPath: /var/lib/localstack/data
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: localstack-data
          persistentVolumeClaim:
            claimName: gau-localstack-${DEPLOY_ENV}-pvc
