localstack/k8s/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gau-localstack-ingress
  namespace: bao-${DEPLOY_ENV}-env
  labels:
    app: bao-platform
    env: ${DEPLOY_ENV}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "${API_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gau-localstack-service
                port:
                  number: 4566
